--- a/styles/partials/global/_global.scss
+++ b/styles/partials/global/_global.scss
@@ -1,12 +1,54 @@
 
 
 // ** Type ** //
+h1, h2, h3, h4, p, a {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: $primary-text-color;
+        line-height: 1.5;
+}
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+        font-size: 1.25rem;
+}
+
+h4 {
+        font-size: 1.375rem;
+}
+
+p {
+        font-size: 1.125rem;
+}
+
+a {
+        text-decoration: none;
+
+}
+
 
 
 // ** Global Components ** //
 
-
+section {
+        padding: 1rem 4rem;
+}
 
         // ** Buttons ** //
+.primary-cta {
+        background-color: $accent-orange;
+        color: $background-white;
+        border-radius: 4rem;
+        display: block;
+        width: 12.5rem;
+        padding: 0.75rem 2rem;
+        text-align: center;
+}
 
         // ** Icons  ** //
