--- a/styles/partials/pages/_home.scss
+++ b/styles/partials/pages/_home.scss
@@ -57,7 +57,11 @@
     }
 
     &__link {
-
+        transition: all 400ms ease;
+        &:hover {
+            transform: translateY(-10px);
+            scale: 1.05;
+        }
     }
 
     &__article {
