--- a/styles/styles.css
+++ b/styles/styles.css
@@ -400,6 +400,14 @@ section {
   width: 12.5rem;
   padding: 0.75rem 2rem;
   text-align: center;
+  border: 2px solid #DB7A4E;
+  transition: all 400ms ease;
+}
+.primary-cta:hover {
+  transform: translateX(0.75rem);
+  background-color: #a9603f;
+  background-color: #fff;
+  color: #335576;
 }
 
 .section--hero {
@@ -448,6 +456,13 @@ section {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.section--recommendations__link {
+  transition: all 400ms ease;
+}
+.section--recommendations__link:hover {
+  transform: translateY(-10px);
+  scale: 1.05;
+}
 .section--recommendations__article {
   position: relative;
 }
@@ -467,6 +482,69 @@ section {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
+.section--itinerary {
+  background-image: url("../assets/images/hawaii.jpg");
+  min-width: 100%;
+  max-width: 100%;
+  background-position: center;
+  background-size: cover;
+  height: 95vh;
+}
+.section--itinerary--greece {
+  background-image: url("../assets/images/greece.jpg");
+}
+.section--itinerary--iceland {
+  background-image: url("../assets/images/iceland.jpg");
+}
+.section--itinerary h1 {
+  font-size: 3rem;
+  margin-bottom: 0.25rem;
+  color: #fff;
+}
+.section--itinerary__wrapper {
+  max-width: 56.25rem;
+  margin: 0 auto;
+  margin: 2rem auto 4rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  text-align: center;
+}
+
+.section--itinerary__day-plan {
+  position: relative;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 0rem 1rem 2rem;
+}
+.section--itinerary__day-plan h3 {
+  border-bottom: 2px solid #335576;
+}
+.section--itinerary__day-plan ul {
+  list-style-type: none;
+  -webkit-padding-start: 0px;
+          padding-inline-start: 0px;
+  margin-top: 2rem;
+}
+.section--itinerary__day-plan li {
+  margin-bottom: 1rem;
+  width: 100%;
+}
+.section--itinerary__day-plan a {
+  width: 100%;
+  display: block;
+  transition: all 400ms ease;
+  background-color: #FEFAF5;
+  border-radius: 4px;
+  padding: 1rem;
+}
+.section--itinerary__day-plan a:hover {
+  background-color: #335576;
+  color: #fff;
+}
+
 .footer {
   background-color: #FEFAF5;
 }
@@ -481,6 +559,12 @@ section {
 }
 .footer .footer__nav-wrapper h3 {
   margin-bottom: 1.5rem;
+}
+.footer a {
+  transition: all 400ms ease;
+}
+.footer a:hover {
+  color: #DB7A4E;
 }
 .footer__hours-wrapper {
   grid-column: span 3;
@@ -498,6 +582,11 @@ section {
 }
 .footer__social-wrapper img {
   max-width: 80%;
+  transition: all 400ms ease;
+}
+.footer__social-wrapper img:hover {
+  transform: translateY(-0.5rem);
+  scale: 1.05;
 }
 .footer .footer__contact-label {
   font-size: 0.75rem;
@@ -543,6 +632,16 @@ section {
   justify-content: center;
   align-items: center;
 }
+.header .header__logo-wrapper a {
+  transform: all 400ms ease;
+}
+.header .header__logo-wrapper a:hover h2 {
+  color: #DB7A4E;
+}
 .header .header__logo-wrapper h2 {
   margin: 0px;
+}
+
+.current {
+  border-bottom: 2px solid #DB7A4E;
 }/*# sourceMappingURL=styles.css.map */
